--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,10 @@ body {
 
     background: #f2f9fe;
     background: linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
-    background: -webkit-linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
-    background: -moz-linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
-    background: -ms-linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
-    background: -o-linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
-
-    border-radius: 100px;
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-
-    position: relative;
-    margin: 120px auto 20px;
+    background: linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+    background: linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+    background: linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+    background: linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
 }
 
 #cloud:after, #cloud:before {
