--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,17 @@ body {
 
     background: #f2f9fe;
     background: linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
-    background: linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
-    background: linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
-    background: linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
-    background: linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+    background: -webkit-linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+    background: -moz-linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+    background: -ms-linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+    background: -o-linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+
+    position: relative;
+    margin: 120px auto 20px;
 }
 
 #cloud:after, #cloud:before {
@@ -36,7 +43,7 @@ body {
     width: 180px;
     height: 180px;
     top: -90px;
-    left: 50px;
+    right: 50px;
 
     border-radius: 200px;
     -webkit-border-radius: 200px;
